# full_stack

./: .gitignore  README.md  pyproject.toml  report.md
src/full_stack/: crew.py  main.py  report.md  ui.py
src/full_stack/.gradio/cached_examples/15/: log.csv
src/full_stack/config/: agents.yaml  tasks.yaml
